fix: missing background

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  background-image: url(img/background.svg);
+  background-image: url(/portfolio/img/background.svg);
   /* backdrop-filter: brightness(0.4); */
   height: 100%;
 }
